; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_radius.c_radius_Account_Set_Ipv6.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_radius.c_radius_Account_Set_Ipv6.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.radacct = type { %struct.TYPE_4__, i32 }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@PROTO_IPV6CP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @radius_Account_Set_Ipv6(%struct.radacct* %0, i32* %1) #0 {
  %3 = alloca %struct.radacct*, align 8
  %4 = alloca i32*, align 8
  store %struct.radacct* %0, %struct.radacct** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32, i32* @PROTO_IPV6CP, align 4
  %6 = load %struct.radacct*, %struct.radacct** %3, align 8
  %7 = getelementptr inbounds %struct.radacct, %struct.radacct* %6, i32 0, i32 1
  store i32 %5, i32* %7, align 4
  %8 = load %struct.radacct*, %struct.radacct** %3, align 8
  %9 = getelementptr inbounds %struct.radacct, %struct.radacct* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i32*, i32** %4, align 8
  %13 = call i32 @memcpy(i32* %11, i32* %12, i32 4)
  ret void
}

declare dso_local i32 @memcpy(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
